[workspace]
members = [
    "book-examples",
    "packages/*",
    "packages/*/example",
    "packages/*/tests/*",
    "scripts",
]
resolver = "2"

[workspace.package]
authors = ["Rust For Web <info@rustforweb.org>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/RustForWeb/floating-ui"
version = "0.1.3"

[workspace.dependencies]
cfg-if = "1.0.0"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
dyn_derive = "0.3.4"
dyn_std = "0.3.3"
leptos = { git = "https://github.com/jcold/leptos0615.git", branch = "master", features = [
    "csr",
] }
leptos_router = { git = "https://github.com/jcold/leptos0615.git", branch = "leptos-0.6", features = [
    "csr",
] }
log = "0.4.22"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
wasm-bindgen = "0.2.93"
wasm-bindgen-test = "0.3.43"

[workspace.dependencies.web-sys]
version = "0.3.70"
features = [
    "css",
    "AddEventListenerOptions",
    "CssStyleDeclaration",
    "Document",
    "DomRect",
    "DomRectList",
    "Element",
    "Event",
    "EventTarget",
    "HtmlElement",
    "HtmlSlotElement",
    "IntersectionObserver",
    "IntersectionObserverEntry",
    "IntersectionObserverInit",
    "Node",
    "ResizeObserver",
    "ResizeObserverEntry",
    "Selection",
    "ShadowRoot",
    "Window",
]
